--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ repositories {
 
 dependencies {
 	compile 'org.postgresql:postgresql:42.1.1'
+	compile 'org.hibernate:hibernate-core:5.3.7.Final'
 	compile group: 'ma.glasnost.orika', name: 'orika-core', version: '1.5.2'
+
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
