First approach to the tests (UserDetails not working)

--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.security:spring-security-test')
-    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
+//    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
+    compile group: 'com.h2database', name: 'h2', version: '1.4.197'
 }
