--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,11 @@ dependencies {
 //    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
     compile group: 'com.h2database', name: 'h2', version: '1.4.197'
 }
+
+
+compileKotlin {
+	kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+	kotlinOptions.jvmTarget = "1.8"
+}
